@@ -7,6 +7,10 @@
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 -----------------+-----------+--------------------------------------------------
 
+HP-2011-05-09-0: Bugfix:     error output of check_option_pty*() function used
+                             uninitialized $host variable
+                 Review:     SH
+
 JG-2011-05-05-0: Enhancem.   disable history in sessions started by testsuite
                  Issue:      TS-392
                  Review:     HP
